--- a/index.html
+++ b/index.html
@@ -1,85 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
- <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Smilio Integrator Tools</title>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-<!-- Latest compiled and minified JavaScript -->
-</head>
-<body>
-
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="./">
-      	Skiply
-    	</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="./simulator.html">Simulator (Smilio A)</a></li>
-	<li><a href="./simulatorS.html">Simulator (Smilio S)</a></li>
-        <li><a href="./configurator.html">Configurator</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Help <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="https://faq.skiply.eu">FAQ</a></li>
-            <li><a href="https://www.youtube.com/channel/UCw1MuxiRPWJuWKNCWjPQp_w">Videos</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="https://boutique.smilio.fr">How to buy ?</a></li>
+    <title>Smilio Integrator Tools</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!-- Latest compiled and minified JavaScript -->
+  </head>
+  <body>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="./">
+          Skiply
+          </a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="./simulator.html">Simulator (Smilio A)</a></li>
+            <li><a href="./simulatorS.html">Simulator (Smilio S)</a></li>
+            <li><a href="./configurator.html">Configurator</a></li>
           </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-
-<div class="container">
-	<header>
-		<h1>Smilio Integrator Tools</h1>
-		</header>
-	<div class="row">
-			<div class="col-sm-12" style="margin-bottom:15px;">
-		Welcome to the Smilio Integrator Tools. Smilio is a collection of configurable connected buttons, communicating with both Sigfox and LoRaWAN (dual mode).
-		<br />
-		<br />
-		<img class="img-responsive" alt="Connected Buttons Smilio" src="./img/smilio-action.jpg" />
-	</div>
-</div>
-<div class="row" style="margin-bottom:15px;">
-	<div class="col-sm-6" style="margin-bottom:15px;">
-    The Simulator will help you to prepare your apps, even without having a Smilio Button in your hands.<br /><br />
-    <a href="/simulator.html"><button type="button" class="btn btn-primary">Use the simulator</button></a>
-</div>
-    	<div class="col-sm-6" style="margin-bottom:15px;">
-    The Configurator will help you to setup your Smilio with the correct Downlink for your App.<br /><br />
-    <a href="/configurator.html"><button type="button" class="btn btn-primary">Use the configurator</button></a>
-  </div>
-</div>
-</div>
-</body>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Help <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="https://faq.skiply.eu">FAQ</a></li>
+                <li><a href="https://www.youtube.com/channel/UCw1MuxiRPWJuWKNCWjPQp_w">Videos</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="https://boutique.smilio.fr">How to buy ?</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+      </div>
+      <!-- /.container-fluid -->
+    </nav>
+    <div class="container">
+      <header>
+        <h1>Smilio Integrator Tools</h1>
+      </header>
+      <div class="row">
+        <div class="col-sm-12" style="margin-bottom:15px;">
+          Welcome to the Smilio Integrator Tools. Smilio is a collection of configurable connected buttons, communicating with both Sigfox and LoRaWAN (dual mode).
+          <br />
+          <br />
+          <img class="img-responsive" alt="Connected Buttons Smilio" src="./img/smilio-action.jpg" />
+        </div>
+      </div>
+      <div class="row" style="margin-bottom:15px;">
+        <div class="col-sm-6" style="margin-bottom:15px;">
+          The Simulator will help you to prepare your apps, even without having a Smilio Button in your hands.<br /><br />
+          <a href="/simulator.html"><button type="button" class="btn btn-primary">Use the simulator</button></a>
+        </div>
+        <div class="col-sm-6" style="margin-bottom:15px;">
+          The Configurator will help you to setup your Smilio with the correct Downlink for your App.<br /><br />
+          <a href="/configurator.html"><button type="button" class="btn btn-primary">Use the configurator</button></a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
